apps/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: worker-ingress
  namespace: codeio

  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "worker-router"

spec:
  ingressClassName: nginx

  rules:
    - host: "*.ws.localtest.me"

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: codeio-workspace-gateway
                port:
                  number: 80
